--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ PyYAML==6.0
 requests==2.28.1
 six==1.16.0
 snowballstemmer==2.2.0
-sphinx==6.0.0
+sphinx<=6.0.0
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==2.0.0
