--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ alabaster==0.7.12
 Babel==2.11.0
 certifi==2022.12.7
 charset-normalizer==2.1.1
-docutils==0.19
+docutils==0.17.1
 et-xmlfile==1.1.0
 idna==3.4
 imagesize==1.4.1
@@ -25,7 +25,8 @@ PyYAML==6.0
 requests==2.28.1
 six==1.16.0
 snowballstemmer==2.2.0
-sphinx<=6.0.0
+sphinx==5.3.0
+sphinx-rtd-theme==1.1.1
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==2.0.0
