--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ importlib-metadata==6.0.0
 Jinja2==3.1.2
 markdown-it-py==2.1.0
 MarkupSafe==2.1.1
+mathjax==0.1.2
 mdit-py-plugins==0.3.3
 mdurl==0.1.2
 myst-parser==0.18.1
